updated with get and post

--- a/frontend/inventory_app/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/inventory_app/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,13 @@
-<p>dashboard works!</p>
+<div fxLayoutAlign="center center"fxLayout="column" fxFlexFill fxLayout="column" class="main-div">
+    <mat-card fxflex="0">
+        <div class="container">
+            <div class="row">
+              <div class="col-sm">
+                <ul class="buttons">
+                    <button type="button" class="btn btn-primary btn-lg" type="submit" (click)="viewAssignments();">View assignments</button><br/><br/>
+                </ul>
+              </div>
+            </div>
+          </div> 
+    </mat-card>
+</div>
