--- a/frontend/inventory_app/src/app/components/assign/view-assignment/view-assignment.component.html
+++ b/frontend/inventory_app/src/app/components/assign/view-assignment/view-assignment.component.html
@@ -14,15 +14,12 @@
       <td>{{ assignment.employeeId }}</td>
       <td>{{ assignment.assetId }}</td>
       <td>
-        <!-- <button
-          type="button"
-          data-bs-toggle="modal"
-          data-bs-target="#exampleModal2"
-          class="btn btn-info"
-          (click)="getId(asset.assetId)"
+        <button
+        type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+          (click)="getId(assignment.assignId)"
         >
           Edit
-        </button> -->
+        </button>
         <button (click)="deleteAssignment(assignment)" class="btn btn-danger mx-3">
           Delete
         </button>
@@ -30,3 +27,45 @@
     </tr>
   </tbody>
 </table>
+<!-- Button trigger modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="assignForm" (ngSubmit)="onSubmit()">
+          <hr/>      
+              <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputCity">Assignment Id</label>
+                <input type="text" class="form-control" id="inputAssetName" formControlName="assignmentId"  >
+              </div>
+              </div>
+              <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputCity">Asset Id</label>
+                <input type="text" class="form-control" id="inputAssetType" formControlName="assetId"  >
+              </div>
+              <div class="form-group col-md-6">
+                <label for="inputCity">Employee Id</label>
+                <input type="text" class="form-control" id="inputGivendate" formControlName="employeeId"  >
+              </div>        
+              <br/>
+            </div>
+            <div class="form-group">
+              <div class="form-check">
+               
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Add assignment</button>
+          </form>  
+      </div>
+      <div class="modal-footer">
+        
+      </div>
+    </div>
+  </div>
+</div>
