--- a/frontend/inventory_app/src/app/components/asset/add-asset/add-asset.component.scss
+++ b/frontend/inventory_app/src/app/components/asset/add-asset/add-asset.component.scss
@@ -17,4 +17,24 @@
 }
 .bg-light {
     background-color: #5692cd!important;
+    width: 10000%;
+}
+@media screen and (max-width: 1110px){
+    .profile-picture{
+        margin: 0 0px 0 80px;;
+    }
+
+    .profile-details-name{
+        font-size:20px;
+    }
+
+    .profile-details-role .primary-text{
+        font-size: 12px;
+    }
+
+    .profile-options .btn{
+        width:120px;
+        padding: 11px 0;
+        z-index: 700;
+    }
 }
