--- a/frontend/inventory_app/src/app/components/employee/view-employee/view-employee.component.html
+++ b/frontend/inventory_app/src/app/components/employee/view-employee/view-employee.component.html
@@ -13,20 +13,17 @@
 <tbody>
     <tr *ngFor="let employee of employees">
       <td>{{ employee.id }}</td>
-      <td>{{ employee.nsame }}</td>
+      <td>{{ employee.name }}</td>
       <td>{{ employee.address }}</td>
       <td>{{ employee.contact }}</td>
       <td></td>
       <td>
-        <!-- <button
-          type="button"
-          data-bs-toggle="modal"
-          data-bs-target="#exampleModal2"
-          class="btn btn-info"
-          (click)="getId(asset.assetId)"
+        <button
+        type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+          (click)="getId(employee.id)"
         >
           Edit
-        </button> -->
+        </button>
         <button (click)="deleteEmployee(employee)" class="btn btn-danger mx-3">
           Delete
         </button>
@@ -34,3 +31,50 @@
     </tr>
   </tbody>
 </table>
+
+<!-- Button trigger modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
+  
+          <hr/>
+              <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputCity">Employee name</label>
+                <input type="text" class="form-control" id="inputEmployeeName" formControlName="name"  >
+              </div>
+              <div class="form-group col-md-6">
+                <label for="inputCity">Address</label>
+                <input type="text" class="form-control" id="inputEmployeeType" formControlName="address"  >
+              </div>
+              <div class="form-group col-md-6">
+                <label for="inputCity">Contact</label>
+                <input type="text" class="form-control" id="inputEmployeeType" formControlName="contact"  >
+              </div>
+              <br/>
+              
+            </div>
+            <div class="form-group">
+              <div class="form-check">
+               
+              </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Add employee</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+
+          </form>
+        
+        
+      </div>
+      <div class="modal-footer">
+        
+      </div>
+    </div>
+  </div>
+</div>
