--- a/frontend/inventory_app/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/inventory_app/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<body style="background-image:url('../../../assets/lap.jpg'); background-repeat:no-repeat; background-size:cover;opacity: 80%;">
 <div fxLayoutAlign="center center"fxLayout="column" fxFlexFill fxLayout="column" class="main-div">
     <mat-card fxflex="0">
         <div class="container">
@@ -11,3 +12,4 @@
           </div> 
     </mat-card>
 </div>
+</body>
